remove proxy property from scripts object

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
     "build-storybook": "build-storybook -s public",
-    "proxy": "http://localhost:8001",
     "cypress": "cypress open -P ."
   },
   "browserslist": {
@@ -52,5 +51,6 @@
       "<rootDir>/node_modules/",
       "<rootDir>/.git/"
     ]
-  }
+  },
+  "proxy": "http://localhost:8001"
 }
